Refactoring some. Styling some

--- a/src/styles.css
+++ b/src/styles.css
@@ -96,14 +96,48 @@ label {
 }
 
 img.previewPicture {
-    max-width: 33%;
+    max-width: 100%;
+}
 
+img.selected {
+    border: tomato 2px solid;
+}
+
+.button.button-small {
+    width: auto;
+    display: inline;
+}
+
+.button.submit,
+.button.cancel {
+    margin: 0 .25rem;
+}
+
+.button#deleteImages {
+    grid-column-end: -1;
+    grid-row-end: -1;
+}
+
+.button:disabled {
+    filter: opacity(.5);
+    cursor: not-allowed
 }
 
 div.imagesHolder {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: .25rem;
+    align-items: center;
+    /* justify-content: space-around; */
+    /* align-content: space-around; */
+    padding: .25rem;
+    border-color: silver;
+    border-style: solid;
+    border-width: 1px;
+    margin: .25rem 0;
+}
+
+div.buttonHolder {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: space-around;
-    padding: 1rem 0;
+    justify-content: center;
 }
