--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ section h1 {
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
-    position: absolute;
+    position: fixed;
     bottom: 3rem;
     right: 3rem;
 }
@@ -169,4 +169,35 @@ div.imagesHolder {
 div.buttonHolder {
     display: flex;
     justify-content: center;
+}
+
+/* Styling the sales item post */
+div.salesItem {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr 4fr;
+    grid-template-areas:
+        "picture title"
+        "picture price"
+        "picture description";
+    grid-gap: .5rem;
+    align-items: center;
+    text-align: left;
+}
+
+div.salesItem img {
+    grid-area: picture;
+}
+
+div.salesItem h2 {
+    grid-area: title;
+}
+
+div.salesItem h3 {
+    grid-area: price;
+}
+
+div.salesItem p {
+    grid-area: description;
+    align-self: flex-start;
 }
