--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,20 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 0;
     padding: 0;
+}
+
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 header {
@@ -40,7 +53,7 @@ header>div>a:hover {
 
 section {
     text-align: center;
-    padding: 2rem;
+    padding: .5rem;
 }
 
 section h1 {
@@ -100,6 +113,10 @@ form {
 
 label {
     text-align: left;
+}
+
+input {
+    padding-left: .25rem;
 }
 
 .salesItemForm {
@@ -258,6 +275,7 @@ div.salesItemDetails img {
     grid-area: picture;
     max-height: 50vh;
     justify-self: center;
+    max-width: 80vw;
 }
 
 div.salesItemDetails span.arrow {
